--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ye-yu/web-piano-visualiser#readme",
   "dependencies": {
+    "chalk": "^4.0.0",
     "easymidi": "^1.1.2"
   },
   "devDependencies": {
