--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/ye-yu/web-piano-visualiser#readme",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "chalk": "^4.0.0",
     "easymidi": "^1.1.2",
+    "jquery": "^3.5.1",
     "websocket": "^1.0.31"
   },
   "devDependencies": {
